# fix-gateway-cpp

./: CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.performance  LINUX_TEST_REPRODUCTION.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_TESTING.md  README.md  TEMPLATED_MESSAGEPOOL_SUMMARY.md  body_calc  body_calc.cpp  deploy-linux.sh  deploy_performance_tests.sh  docker-compose.performance.yml  docker-compose.yml  local-build-command.md  run_performance_tests.sh  test_checksum  test_debug  test_length
config/: priority_config.h
demos/: README.md  existing_pool_templated_demo.cpp  fix_demo.cpp  lockfree_demo.cpp  memory_performance_test.cpp  message_integration_demo.cpp  message_pool_test.cpp  message_pool_validation_test.cpp  quick_perf_demo.cpp  raw_pointer_api_demo.cpp  raw_pointer_perf_demo.cpp  simple_lockfree_test.cpp  templated_pool_demo.cpp
docs/: ARCHITECTURE.md  CORE_PINNED_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  LINUX_DEPLOYMENT_TEST_RESULTS.md  MESSAGE_POOL_PERFORMANCE_ANALYSIS.md  PARSER_PERFORMANCE.md  PLATFORM_DETECTION_GUIDE.md  SEQ_NUM_GAP_HANDLING_DESIGN.md  THREAD_PINNING_GUIDE.md  TRADING_INFRASTRUCTURE_ANALYSIS.md
examples/: fix_gateway_usage_example.cpp  parser_buffer_demo.cpp
include/application/: fix_gateway.h  order_book_interface.h  priority_queue_container.h
include/common/: constants.h  message.h  message_pool.h
include/manager/: async_sender_manager.h  business_logic_manager.h  fix_session_manager.h  inbound_message_manager.h  message_manager.h  message_router.h  outbound_message_manager.h  sequence_num_gap_manager.h
include/network/: async_sender.h  message_manager.h  tcp_connection.h
include/protocol/: fix_builder.h  fix_fields.h  fix_message.h  fix_parser.h  stream_fix_parser.h
include/session/: fix_session_manager.h
include/utils/: fast_string_conversion.h  lockfree_priority_queue.h  lockfree_queue.h  logger.h  performance_counters.h  performance_timer.h  platform_detector.h  priority_queue.h
monitoring/: prometheus.yml
src/: lockfree_demo.cpp  main.cpp  message_pool_test.cpp  platform_demo.cpp
src/application/: CMakeLists.txt  fix_gateway.cpp
src/common/: CMakeLists.txt  message.cpp  message_pool.cpp
src/manager/: CMakeLists.txt  async_sender_manager.cpp  fix_session_manager.cpp  inbound_message_manager.cpp  message_manager.cpp  message_router.cpp  outbound_message_manager.cpp  sequence_num_gap_manager.cpp
src/network/: CMakeLists.txt  async_sender.cpp  tcp_connection.cpp
src/protocol/: CMakeLists.txt  fix_builder.cpp  fix_fields.cpp  fix_message.cpp  stream_fix_parser.cpp
src/session/: CMakeLists.txt
src/utils/: CMakeLists.txt  fast_string_conversion.cpp  lockfree_priority_queue.cpp  logger.cpp  performance_counters.cpp  performance_timer.cpp  platform_detector.cpp  priority_queue.cpp
tests/: CMakeLists.txt  claude_performance_test.cpp  test_async_sender.cpp  test_fix_session_manager.cpp  test_message_manager.cpp  test_message_router.cpp  test_my_debug.cpp  test_sequence_num_gap_manager.cpp  test_stream_fix_parser.cpp  test_stream_fix_parser_2stage.cpp  test_stream_fix_parser_comprehensive.cpp  test_stream_fix_parser_improved.cpp  test_stream_fix_parser_performance.cpp
